@@ -8,6 +8,8 @@ Version 0.24.8
 - The arrow length and half widths may be floating point (issue #111).
 - Increase precision of arrows (issue #172).
 - Avoid that certain characters in text break the SVG export (issue #162).
+- Fix certain components (issue #173).
+- Fix a performance issue with Linux and certain zoom factors (issue #166).
 
 Version 0.24.7
 --------------
